Let MySQL root password be saved to config file. This is stored in clear text right now in the JSON setings file, which I know is bad practice, but I am unsure how to handle it properly. This password is also stored in clear text in various OpenSim config files so it may be a non-issue? It will give the user a warning about it though before saving.

--- a/PortableMySQL8/MainWindow.xaml
+++ b/PortableMySQL8/MainWindow.xaml
@@ -22,7 +22,7 @@
 
             <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
                 <PasswordBox x:Name="passwordBoxMySqlRootPass" PasswordChar="*" Width="200" HorizontalAlignment="Left" Margin="0,0,10,0" />
-                <CheckBox x:Name="checkBoxSavePass" Content="Save Password" HorizontalAlignment="Left"/>
+                <CheckBox x:Name="checkBoxSavePass" Content="Save Password" HorizontalAlignment="Left" Click="checkBoxSavePass_Click"/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal">
