--- a/PortableMySQL8/MainWindow.xaml
+++ b/PortableMySQL8/MainWindow.xaml
@@ -1,9 +1,10 @@
-﻿<Window x:Class="PortableMySQL8.MainWindow"
+﻿<Controls:MetroWindow x:Class="PortableMySQL8.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PortableMySQL8"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
         Title="MainWindow" Width="515" Height="300" MinWidth="515" MinHeight="150">
     <Grid>
@@ -31,4 +32,4 @@
             </StackPanel>
         </StackPanel>
     </Grid>
-</Window>
+</Controls:MetroWindow>
