--- a/PortableMySQL8/MainWindow.xaml
+++ b/PortableMySQL8/MainWindow.xaml
@@ -28,7 +28,15 @@
 
             <StackPanel Orientation="Horizontal">
                 <Label Content="Port" HorizontalAlignment="Left"/>
-                <TextBox x:Name="textBoxPort" Text="3306" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                <Controls:NumericUpDown
+                    x:Name="nudPort"
+                    Value="3306"
+                    Minimum="1"
+                    Maximum="65535"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    SwitchUpDownButtons="True"
+                    ParsingNumberStyle="Integer"/>
             </StackPanel>
         </StackPanel>
     </Grid>
