--- a/PortableMySQL8/MainWindow.xaml
+++ b/PortableMySQL8/MainWindow.xaml
@@ -41,8 +41,10 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <StackPanel Orientation="Vertical" HorizontalAlignment="Right" Margin="5">
-                <Label x:Name="labelMySqlStatus" Content="MySQL is NOT running" FontWeight="Bold" Foreground="Red" />
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5">
+                <Label x:Name="labelMySqlStatus" Content="MySQL is not running" FontWeight="Bold" Foreground="Red" />
+                <Label x:Name="labelRobustStatus" Content="ROBUST is not running" FontWeight="Bold" Foreground="Red" />
+                <Label x:Name="labelOpenSimStatus" Content="OpenSim is not running" FontWeight="Bold" Foreground="Red" />
             </StackPanel>
 
             <StackPanel Grid.Row="1" Margin="10,8,10,0">
