--- a/PortableMySQL8/Tabs/TabDatabase.xaml
+++ b/PortableMySQL8/Tabs/TabDatabase.xaml
@@ -20,19 +20,19 @@
         <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="0" Margin="10,0,10,0">
             <StackPanel Orientation="Vertical" Margin="0,0,0,10">
                 <Label Content="OpenSim Schema Name"/>
-                <TextBox x:Name="textBoxOpenSimName"/>
+                <TextBox x:Name="textBoxMainName" TextChanged="textBoxMainName_TextChanged"/>
             </StackPanel>
 
             <StackPanel Orientation="Vertical" Margin="0,0,0,10">
                 <Label Content="Profiles Schema Name"/>
-                <TextBox x:Name="textBoxProfilesName"/>
+                <TextBox x:Name="textBoxProfilesName" TextChanged="textBoxProfilesName_TextChanged"/>
             </StackPanel>
         </StackPanel>
 
         <StackPanel Grid.Column="1" Grid.Row="0" Margin="10,0,10,0">
             <StackPanel Orientation="Vertical" Margin="0,0,0,10">
                 <Label Content="Groups Schema Name"/>
-                <TextBox x:Name="textBoxGroupsName"/>
+                <TextBox x:Name="textBoxGroupsName" TextChanged="textBoxGroupsName_TextChanged"/>
             </StackPanel>
         </StackPanel>
 
