Add option to save database login details for Database tab

--- a/PortableMySQL8/Tabs/TabDatabase.xaml
+++ b/PortableMySQL8/Tabs/TabDatabase.xaml
@@ -28,6 +28,10 @@
                 <Label Content="DB User Password"/>
                 <PasswordBox x:Name="passWordBoxDbUserPass" PasswordChar="*" PasswordChanged="passWordBoxDbUserPass_PasswordChanged"/>
             </StackPanel>
+
+            <StackPanel Orientation="Vertical" Margin="0,0,0,10">
+                <CheckBox x:Name="checkBoxSaveLoginInfo" Content="Save Login Info" Click="checkBoxSaveLoginInfo_Click"/>
+            </StackPanel>
         </StackPanel>
 
         <!-- Right -->
