--- a/PortableMySQL8/Tabs/TabAbout.xaml
+++ b/PortableMySQL8/Tabs/TabAbout.xaml
@@ -5,8 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PortableMySQL8"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignWidth="515" d:DesignHeight="280">
     <Grid>
-        <TextBlock x:Name="textBlockLicense" Text="License Text Here" IsManipulationEnabled="False" TextWrapping="Wrap" Margin="10"/>
+        <ScrollViewer MaxHeight="500" Width="Auto" Margin="10,5,10,5">
+            <TextBlock x:Name="textBlockLicense" Text="License Text Here" IsManipulationEnabled="False" TextWrapping="Wrap"/>
+        </ScrollViewer>
     </Grid>
 </UserControl>
