Give visual indication to root password box if it is needed

--- a/PortableMySQL8/MainWindow.xaml
+++ b/PortableMySQL8/MainWindow.xaml
@@ -20,7 +20,7 @@
                         <Label Content="Root Password" HorizontalAlignment="Left"/>
 
                         <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
-                            <PasswordBox x:Name="passwordBoxMySqlRootPass" PasswordChar="*" Width="200" HorizontalAlignment="Left" Margin="0,0,10,0" />
+                            <PasswordBox x:Name="passwordBoxMySqlRootPass" PasswordChar="*" Width="200" HorizontalAlignment="Left" Margin="0,0,10,0" PasswordChanged="PasswordBoxMySqlRootPass_PasswordChanged" />
                             <CheckBox x:Name="checkBoxSavePass" Content="Save Password" HorizontalAlignment="Left" Click="CheckBoxSavePass_Click"/>
                         </StackPanel>
 
