Do Config changes in control events instead of sprinkling SaveUIConfig() all over the place

--- a/PortableMySQL8/MainWindow.xaml
+++ b/PortableMySQL8/MainWindow.xaml
@@ -34,7 +34,8 @@
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
                     SwitchUpDownButtons="True"
-                    ParsingNumberStyle="Integer"/>
+                    ParsingNumberStyle="Integer"
+                    ValueChanged="NudPort_ValueChanged"/>
                         </StackPanel>
                     </StackPanel>
 
