Add copyrights text to About tab and add selection decoration to the tabs

--- a/PortableMySQL8/MainWindow.xaml
+++ b/PortableMySQL8/MainWindow.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Width="515" Height="280" ResizeMode="CanMinimize">
     <Grid>
-        <Controls:MetroAnimatedTabControl Controls:HeaderedControlHelper.HeaderFontSize="16">
+        <Controls:MetroAnimatedTabControl Controls:HeaderedControlHelper.HeaderFontSize="16" Controls:TabControlHelper.Underlined="SelectedTabItem">
             <TabItem x:Name="tabMain" Header="Main">
                 <Grid>
                     <Grid.ColumnDefinitions>
